<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">全程食安管家</string>
    <string name="app_start_disable_message">服务无法连接，请稍后继续..</string>
    <string name="app_start_loading_location">定位中，请稍后..</string>
    <string name="app_start_location_success">定位成功</string>
    <string name="app_start_location_failure">定位失败</string>
    
    <string name="mina_index_delicacy">美食</string>
    <string name="mina_index_nutritional_lunch">学生营养餐</string>
    <string name="mina_index_safety_information">食品安全信息</string>
    <string name="mina_index_model_seller">示范商家</string>
    <string name="mina_index_ranking">排行榜</string>
    <string name="mina_index_coupon_today">今日优惠 </string>
    <string name="mina_index_table_title">猜你想吃 </string>
    
    <string name="search_header_title">餐厅搜索</string>
    <string name="search_header_result_label">搜索结果</string>
    <string name="search_main_keyword_text"> 店名/菜名/路名</string>
    <string name="search_select_keyword_text">输入餐馆名称/菜名/地址</string>
    <string name="search_select_commerial_center_text">选择商圈</string>
    <string name="search_select_credit_text">选择食品安全等级</string>
    <string name="search_select_cuisine_text">选择菜系</string>
    <string name="search_select_atmosphere_text">选择餐厅氛围</string>
    
    <string name="search_near_by_text">直接搜索附近</string>
    
    <string name="search_condition_area_bar">区域</string>
    <string name="search_condition_cuisine_bar">菜系</string>
    <string name="search_condition_credit_bar">信用</string>
    <string name="search_condition_distance_bar">距离</string>
    <string name="search_condition_others_bar">其他</string>
    
    <string name="search_others_atmophere">氛围</string>
    <string name="search_others_average">人均消费</string>
    <string name="search_others_order">排序</string>
	<string name="coupon_header_title">优惠信息</string>
	
	<!-- 食品安全信息  -->
	<string name="safety_info_name">食品安全信息</string>
	<string name="safety_knowledge_name">食品安全知识</string>
	<string name="safety_warning_name">食品安全预警</string>
	
	<!-- 商家排行榜  -->
	<string name="ranking_header_name">商家排行榜</string>
	<string name="ranking_member_name">会员排行榜</string>
    <string name="ranking_major_topic">热门</string>
    <string name="ranking_credit_rating">信用</string>
    <string name="ranking_favorites">收藏</string>
    <string name="ranking_recommend">推荐</string>
    <string name="ranking_others">其他</string>
    <string name="ranking_activite">最活跃</string>
    <string name="ranking_current">最新</string>
    
    <!-- 个人中心  -->
    <string name="usercenter_title">个人中心</string>
    <string name="usercenter_user_anonymous">匿名用户</string>
    <string name="usercenter_complete_btn">完善个人资料</string>
    <string name="usercenter_my_comments">我的点评</string>
    <string name="usercenter_my_coupon">我的优惠</string>
    <string name="usercenter_my_recommendation">我的推荐</string>
    <string name="usercenter_my_favorite">我的收藏</string>
    <string name="usercenter_my_message">我的留言</string>
    <string name="usercenter_settings">设置</string>
    <!-- 个人中心  登录 -->
    <string name="img_back_button_hint">后退</string>
    <string name="usercenter_login_title">用户登录</string>
    <string name="usercenter_login_username_hint">登录名</string>
    <string name="usercenter_login_password_hint">密码</string>
    <string name="usercenter_login_username_input_hint">邮箱地址/昵称/手机号</string>
    <string name="usercenter_login_password_input_hint">密码</string>
    <string name="usercenter_login_remember_password">记住密码</string>
    <string name="usercenter_login_lost_password">找回密码</string>
    <string name="usercenter_login_login_btn">登录</string>
    <string name="usercenter_login_register">新用户注册</string>
    <string name="usercenter_login_use_thirdparty">使用第三方平台登录</string>
    <string name="usercenter_login_thirdparty_weibo">新浪微博</string>
    <string name="usercenter_login_thirdparty_qq">QQ</string>
    <string name="usercenter_login_thirdparty_weixin">微信</string>
    
    <string name="usercenter_login_thirdparty_logining">使用%s帐号登录中…</string>
    <string name="usercenter_login_thirdparty_auth_cancel">授权操作已取消</string>
    <string name="usercenter_login_thirdparty_auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="usercenter_login_thirdparty_auth_complete">授权成功，正在跳转登录操作…</string>
    
    <!-- 个人中心  设置 -->
    <string name="usercenter_login_config_introducion">软件介绍</string>
    <string name="usercenter_login_config_version">版本声明</string>
    <string name="usercenter_login_config_protocol">许可协议</string>
    <string name="usercenter_login_config_update">检查更新</string>
    <string name="usercenter_login_config_logout">退出当前账号</string>
    
    <!-- 个人中心  新用户注册 -->
    <string name="usercenter_register_title">新用户注册</string>
    <string name="usercenter_register_email_input_hint">邮箱地址</string>
    <string name="usercenter_register_mobile_input_hint">手机号</string>
    <string name="usercenter_register_username_input_hint">用户名(6-20位字符)</string>
    <string name="usercenter_register_password_input_hint">密码(6-12位字符)</string>
    <string name="usercenter_register_confirm_password">密码再输入一次</string>
    <string name="usercenter_register_register_btn">注册</string>
    <string name="usercenter_register_terms">我已阅读并同意</string>
    <string name="usercenter_register_terms_link">注册协议</string>
    <!-- 个人中心  找回密码 -->
    <string name="usercenter_lost_pw_title">忘记密码</string>
    <string name="usercenter_lost_pw_tab_security_question">安全问题找回</string>
    <string name="usercenter_lost_pw_tab_mobile_number">手机号找回</string>
    <string name="usercenter_lost_pw_sec_account">请输入您的账号</string>
     <string name="usercenter_lost_pw_sec_account_next">下一步</string>
    <string name="usercenter_lost_pw_sec_ques1">安全问题一</string>
    <string name="usercenter_lost_pw_sec_ques1_ans">安全答案一</string>
    <string name="usercenter_lost_pw_sec_ques2">安全问题二</string>
    <string name="usercenter_lost_pw_sec_ques2_ans">安全答案二</string>
    <string name="usercenter_lost_pw_sec_submit">提交</string>
    <string name="usercenter_lost_pw_phone_note">如果您未使用手机号注册，请选择邮箱找回。</string>
    <string name="usercenter_lost_pw_phone_nickname">请输入您的昵称</string>
    <string name="usercenter_lost_pw_phone_number">请输入您注册时的手机号</string>
    <string name="usercenter_lost_pw_phone_getcode">获取验证码</string>
    <string name="usercenter_lost_pw_phone_code">请输入短信验证码</string>
    <!-- 个人中心  重设密码 -->
    <string name="usercenter_lost_pw_reset_title">重设密码</string>
    <string name="usercenter_lost_pw_reset_note">请重设您的密码(6-20位字符)</string>
    <string name="usercenter_lost_pw_reset_pw">请输入新秘密</string>
    <string name="usercenter_lost_pw_reset_againpw">请再次输入新密码</string>
    <!-- 个人中心  修改个人资料 -->
    <string name="usercenter_modify_info_title">修改个人资料</string>
    <string name="usercenter_modify_info_nickname">昵称</string>
    <string name="usercenter_modify_info_sex">性别</string>
    <string name="usercenter_modify_info_birthday">生日</string>
    <string name="usercenter_modify_info_pw_label">密码</string>
    <string name="usercenter_modify_info_againpw_label">\t\t\t</string>
    <string name="usercenter_modify_info_pw">输入新密码</string>
    <string name="usercenter_modify_info_againpw">再输入一次</string>
    <string name="usercenter_modify_info_phone">手机</string>
    <string name="usercenter_modify_info_okbtn">确定</string>
    <!-- 个人中心  完善个人资料 -->
    <string name="usercenter_complete_info_title">完善个人资料</string>
    <string name="usercenter_complete_info_nickname">昵称\t\t</string>
    <string name="usercenter_complete_info_sex">性别\t\t</string>
    <string name="usercenter_complete_info_sex_m">男</string>
    <string name="usercenter_complete_info_sex_f">女</string>
    <string name="usercenter_complete_info_birthday">生日\t\t</string>
    <string name="usercenter_complete_info_birthday_select">点击选择生日</string>
    <string name="usercenter_complete_info_thumb">头像\t\t</string>
    <string name="usercenter_complete_info_thumb_upload">上传头像</string>
    <string name="usercenter_complete_info_phone">手机\t\t</string>
    <string name="usercenter_complete_info_phone_modify">修改</string>
    <string name="usercenter_complete_info_ques1">安全问题一</string>
    <string name="usercenter_complete_info_ans1">安全答案一</string>
    <string name="usercenter_complete_info_ques2">安全问题二</string>
    <string name="usercenter_complete_info_ans2">安全答案二</string>
     <string name="usercenter_complete_info_okbtn">确认</string>
     <!-- 个人中心  我的点评 -->
    <string name="usercenter_my_comments_title">我的点评</string>
    <string name="usercenter_my_comments_rest">我评价的餐馆</string>
    <string name="usercenter_my_comments_dish">我评价的菜肴</string>
    <string name="usercenter_my_comments_thread">我评价的帖子</string>
    <string name="usercenter_my_comments_avg">人均</string>
    <string name="usercenter_my_comments_reply">回复</string>
    <string name="usercenter_my_comments_detail_title">点评详情</string>
    <string name="usercenter_my_comments_ingredients">食材新鲜度</string>
    <string name="usercenter_my_comments_open">信息透明度</string>
    <string name="usercenter_my_comments_taste">口味</string>
    <string name="usercenter_my_comments_svc">服务</string>
    <string name="usercenter_my_comments_price">价格</string>
    
    <string name="usercenter_message_comment_reply">评论回复</string>
    <string name="usercenter_message_system_msg">系统消息</string>
    <string name="usercenter_message_leave_reply">留言回复</string>
    <!-- 学生营养餐  -->
    <string name="student_meals_search_title">学生营养餐</string>
    <string name="student_meals_search_area">行政区</string>    
    <string name="student_meals_search_school_type">学校类型</string>
    <string name="student_meals_select_school_type">选择学校类型</string>
    <string name="student_meals_search_school_name">学校</string>
    <string name="student_meals_search_area_hint">请选择行政区</string>
    <string name="student_meals_search_school_type_hint">请选择学校类型</string>
    <string name="student_meals_search_school_name_hint">输入关键字</string>
    <string name="student_meals_search_label">搜索</string>
    <string name="student_meals_my_collect_shool">我收藏的学校</string>
    <string name="student_meals_nutrition_calculator">营养计算器</string>
    <string name="student_meals_nutrition_school_list_title">学校列表</string>
    <string name="student_meals_nutrition_select_meal">选择日期餐次</string>
    
    <string name="student_meals_nutrition_school_favorite_title">我的收藏</string>
    <string name="student_meals_nutrition_school_favorite_restaurant">餐馆</string>
    <string name="student_meals_nutrition_school_favorite_cuisine">菜肴</string>
    <string name="student_meals_nutrition_school_favorite_note">帖子</string>
    <string name="student_meals_nutrition_school_favorite_school">学校</string>
    
    <string name="student_meals_school_table_breakfast">早餐</string>
    <string name="student_meals_school_table_moring_meal">上午餐</string>
    <string name="student_meals_school_table_lunch">午餐</string>
    <string name="student_meals_school_table_afternoon_meal">下午餐</string>
    <string name="student_meals_school_table_dinner">晚餐</string>
    
    <string name="student_meals_school_nutrition_component">营养成分</string>
</resources>