<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grays" >

    <!-- 提示消息 -->

    <TextView
        android:id="@+id/textv_fd_usercenter_lost_pw_phone_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/usercenter_lost_pw_phone_note"
        android:textColor="@color/rust"
        android:textSize="16sp" />
    <!-- 内容框 -->

    <LinearLayout
        android:id="@+id/llo_fd_usercenter_lost_pw_phone_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textv_fd_usercenter_lost_pw_phone_note"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rlo_fd_usercenter_lost_pw_phone_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/set_network_login"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <!-- 昵称输入框 -->

            <com.wondersgroup.fdpublicapp.common.custom.FDClearEditText
                android:id="@+id/textv_fd_usercenter_lost_pw_phone_nickname"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:background="@drawable/fd_widget_edit_bg"
                android:hint="@string/usercenter_lost_pw_phone_nickname"
                android:imeActionLabel="确定"
                android:imeOptions="actionDone"
                android:maxLength="30"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlo_fd_usercenter_lost_pw_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/set_network_login_mid"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <!-- 手机号输入框 -->

            <com.wondersgroup.fdpublicapp.common.custom.FDClearEditText
                android:id="@+id/textv_fd_usercenter_lost_pw_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:background="@drawable/fd_widget_edit_bg"
                android:hint="@string/usercenter_lost_pw_phone_number"
                android:imeActionLabel="确定"
                android:imeOptions="actionDone"
                android:maxLength="30"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="16sp" />
            
            <!-- 获取验证码按钮 -->

            <TextView
                android:id="@+id/textv_fd_usercenter_lost_pw_phone_getcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/textv_fd_usercenter_lost_pw_phone_number"
                android:background="@drawable/btn_bg_green"
                android:gravity="center"
                android:text="@string/usercenter_lost_pw_phone_getcode"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlo_fd_usercenter_lost_pw_phone_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/set_network_login_last"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <!-- 验证码输入框 -->

            <com.wondersgroup.fdpublicapp.common.custom.FDClearEditText
                android:id="@+id/textv_fd_usercenter_lost_pw_phone_code"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:background="@drawable/fd_widget_edit_bg"
                android:hint="@string/usercenter_lost_pw_phone_code"
                android:imeActionLabel="确定"
                android:imeOptions="actionDone"
                android:maxLength="30"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlo_fd_usercenter_lost_pw_sec_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llo_fd_usercenter_lost_pw_phone_list"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <!-- 提交按钮 -->

        <TextView
            android:id="@+id/textv_fd_usercenter_lost_pw_phone_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fd_usercenter_login_login_btn"
            android:gravity="center"
            android:text="@string/usercenter_lost_pw_sec_submit"
            android:textColor="@color/rust"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>